Fixed user menu misalignements

--- a/example.css
+++ b/example.css
@@ -9,3 +9,7 @@
 body {
   -webkit-font-smoothing: antialiased;
 }
+
+#component-preview {
+  background: white;
+}
